[Recognizer] Format code to meet checkstyle rules